--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.ts",
-    "start": "npx ts-node src/app.ts"
+    "start": "prisma migrate && npx ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
