--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-simple": "^0.5.6",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
